@@ -12,6 +12,7 @@ Post-v2.12.0
        conntrack.
    - DPDK:
      * Add hardware offload support for output actions
+     * Add hardware offload support for matching IPv6 addresses
 
 v2.12.0 - 03 Sep 2019
 ---------------------
